--- a/app/assets/stylesheets/partials/_runtime-layouts.scss
+++ b/app/assets/stylesheets/partials/_runtime-layouts.scss
@@ -81,9 +81,9 @@
   }
 }
 
-// Single page layout
+// Single page class is added to the body element. It's intended to work with the full width layout.
+// It only provides slight modifications.
 .l-single-page {
-  @extend .l-full-width;
 
   .pages {
     display: none;
